--- a/.conkyrc
+++ b/.conkyrc
@@ -26,7 +26,11 @@ uppercase no
 cpu_avg_samples 2
 override_utf8_locale no
 TEXT
-$alignc ${time %T}
+${font HandelGotD:size=32}
+$alignc ${time %T}${font}
+
+battery $alignr %${battery_percent}
+${battery_bar}
 $sysname $kernel on $machine
 Uptime $alignr $uptime
 Load $alignr $loadavg
@@ -41,29 +45,19 @@ ${hr 1}
 ${upspeedgraph wlan0}
 ${hr 1}
 $processes processes ($running_processes running)
-CPU temp $alignr ${exec sensors | grep temp2 | awk '{print $2}' | sed 's/°//' | sed 's/+//'} 
-${execbar sensors | grep temp2 | awk '{print $2}' | sed 's/°//' | sed 's/+//'}
+CPU temp $alignr ${exec sensors | grep temp1 | awk '{print $2}' | sed 's/°//' | sed 's/+//'} 
+${execbar sensors | grep temp1 | awk '{print $2}' | sed 's/°//' | sed 's/+//'}
 CPU1 $alignr ${cpu cpu0}%
 ${cpubar cpu0}
 CPU2 $alignr ${cpu cpu1}%
 ${cpubar cpu1}
 CPU3 $alignr ${cpu cpu2}%
 ${cpubar cpu2}
-GPU $alignr ${nvidia temp} C / ${nvidia threshold} C
+CPU4 $alignr ${cpu cpu3}%
+${cpubar cpu3}
 MEM $alignc $mem / $memmax $alignr $memperc%
 $membar
 / $alignc ${fs_used /} / ${fs_size /} $alignr ${fs_free_perc /}%
 ${fs_bar /}
-/home $alignc ${fs_used /home} / ${fs_size /home} $alignr ${fs_free_perc /home}%
-${fs_bar /home}
-
-
-NAME $alignr    CPU    MEM
-${top name 1} $alignr ${top cpu 1} ${top mem 1}
-${top name 2} $alignr ${top cpu 2} ${top mem 2}
-${top name 3} $alignr ${top cpu 3} ${top mem 3}
-${top name 4} $alignr ${top cpu 4} ${top mem 4}
-${top name 5} $alignr ${top cpu 5} ${top mem 5}
-${top name 6} $alignr ${top cpu 6} ${top mem 6}
-${top name 7} $alignr ${top cpu 7} ${top mem 7}
-${top name 8} $alignr ${top cpu 8} ${top mem 8}
+windows $alignc ${fs_used /media/sda3/} / ${fs_size /media/sda3/} $alignr ${fs_free_perc /media/sda3/}%
+${fs_bar /media/sda3/}
