--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,9 +11,15 @@ unbind %
 bind | split-window -h
 
 # Stuff for the status bar
+set -g status-interval 5
 set -g status-justify centre
-set -g status-left '#[fg=green]#H #[fg=black]. #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-bg black
+set -g status-fg green
+set -g status-left-length 15
+set -g status-left "#[fg=green,bright]#(cat /proc/loadavg)#[default]"
+set -g status-right '#[fg=white,bright]%a%l:%M:%S %p #[fg=blue,bright]%Y-%m-%d'
+
+set-option -g pane-active-border-fg green
 
 # C-b is not acceptable -- Vim uses it
 bind-key C-a last-window
@@ -27,7 +33,9 @@ set -g base-index 1
 setw -g aggressive-resize on
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-fg green
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -44,4 +52,4 @@ bind-key -t vi-copy 'y' copy-selection
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # auto window rename
-set-window-option -g automatic-rename
+set-window-option -g automatic-rename on
